--- a/products.html
+++ b/products.html
@@ -293,7 +293,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/refrigeration/Counter chillers & freezers.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/refrigeration/Counter chillers & freezers 1.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Refrigeration</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -341,7 +341,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/refrigeration/saladette chiller.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/refrigeration/saladette chiller1.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Refrigeration</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
