--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="container py-5">
                 <div class="row g-5 align-items-center">
                     <div class="col-md-12 col-lg-7">
-                        <h4 class="mb-3" style="color:  #2E2538;">Smart appliances and Technology</h4>
+                        <h4 class="mb-3" style="color:  #2E2538;">Smart Appliances and Technology</h4>
                         <h1 class="mb-5 display-3 " style="color:#DCB342 ;">The kitchen is a Multifunctional Space</h1>
                         <div class="position-relative mx-auto">
                            <a href="contact.html"><button class="bt form-control border-2 b w-75 py-3 px-4 rounded-pill btn btn-primary border-2 bg-primary py-3 px-4 position-absolute rounded-pill text-white "
@@ -120,7 +120,7 @@
                                 </div>
                                 <div class="carousel-item rounded">
                                     <img src="images/les/btm2.jpg" class="img-fluid w-100 h-100 rounded" alt="Second slide">
-                                    <a href="#" class="btn px-4 py-2 text-white rounded">Coffee Machine</a>
+                                    <a href="#" class="btn px-4 py-2 text-white rounded">Preperation Line</a>
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
@@ -146,11 +146,12 @@
                     <div class="col-md-6 col-lg-3">
                         <div class="featurs-item text-center rounded bg-light p-4">
                             <div class="featurs-icon btn-square rounded-circle bg-secondary mb-5 mx-auto">
-                                <i class="fas fa-car-side fa-3x text-white"></i>
+                                <i class="fas fa-solid fa-star fa-3x text-white"></i>
+                                <i class=""></i>
                             </div>
                             <div class="featurs-content text-center">
-                                <h5>Free Shipping</h5>
-                                <p class="mb-0">Free on order over $0000</p>
+                                <h5>Quality Assurance </h5>
+                                <p class="mb-0">Shop with confidence</p>
                             </div>
                         </div>
                     </div>
@@ -168,11 +169,12 @@
                     <div class="col-md-6 col-lg-3">
                         <div class="featurs-item text-center rounded bg-light p-4">
                             <div class="featurs-icon btn-square rounded-circle bg-secondary mb-5 mx-auto">
-                                <i class="fas fa-exchange-alt fa-3x text-white"></i>
+                                <i class="fas fa-solid fa-certificate fa-3x text-white"></i>
+                                <!-- <i class="fa-solid fa-certificate"></i> -->
                             </div>
                             <div class="featurs-content text-center">
-                                <h5>30 Day Return</h5>
-                                <p class="mb-0">30 day money guarantee</p>
+                                <h5>Authorized Dealer</h5>
+                                <p class="mb-0">Trusted Brand Dealer</p>
                             </div>
                         </div>
                     </div>
@@ -305,7 +307,7 @@
                                         <i class="fas fa-star"></i>
                                     </div>
                                     <!-- <h4 class="mb-3"> $0</h4> -->
-                                    <a href="https://wa.me/" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
+                                    <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aBread%20Slicer" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
                                 </div>
                             </div>
                         </div>
@@ -326,7 +328,7 @@
                                         <i class="fas fa-star"></i>
                                     </div>
                                     <!-- <h4 class="mb-3"> $0</h4> -->
-                                    <a href="https://wa.me/" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
+                                    <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aCooking Range" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
                                 </div>
                             </div>
                         </div>
@@ -368,7 +370,7 @@
                                         <i class="fas fa-star"></i>
                                     </div>
                                     <!-- <h4 class="mb-3"> $0</h4> -->
-                                    <a href="https://wa.me/" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
+                                    <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aBlenders" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
                                 </div>
                             </div>
                         </div>
@@ -389,7 +391,7 @@
                                         <i class="fas fa-star"></i>
                                     </div>
                                     <!-- <h4 class="mb-3"> $0</h4> -->
-                                    <a href="https://wa.me/" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
+                                    <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aBlast%20Chillers" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
                                 </div>
                             </div>
                         </div>
@@ -410,7 +412,7 @@
                                         <i class="fas fa-star"></i>
                                     </div>
                                     <!-- <h4 class="mb-3"> $0</h4> -->
-                                    <a href="https://wa.me/" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
+                                    <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aSaladtte%20Chiller" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
                                 </div>
                             </div>
                         </div>
@@ -428,7 +430,7 @@
                                     <i class="fas fa-star"></i>
                                 </div>
                                 <!-- <h4 class="mb-3"> $0</h4> -->
-                                <a href="https://wa.me/" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
+                                <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aCoffee%20Machine" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
                             </div>
                         </div>
                     </div>
@@ -445,7 +447,7 @@
                                     <i class="fas fa-star"></i>
                                 </div>
                                 <!-- <h4 class="mb-3"> $0</h4> -->
-                                <a href="https://wa.me/" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
+                                <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aUnox%20Oven" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
                             </div>
                         </div>
                     </div>
@@ -462,7 +464,7 @@
                                     <i class="fas fa-star"></i>
                                 </div>
                                 <!-- <h4 class="mb-3"> $0</h4> -->
-                                <a href="https://wa.me/" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
+                                <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aLava%20Stone%20Grill" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
                             </div>
                         </div>
                     </div>
@@ -470,7 +472,7 @@
                         <div class="text-center">
                             <img src="images/les/new/bakary/Dough roller.png" class="img-fluid rounded" alt="">
                             <div class="py-2">
-                                <a href="#" class="h5">Dough roller/a>
+                                <a href="#" class="h5">Dough Roller/a>
                                 <div class="d-flex my-3 justify-content-center">
                                     <i class="fas fa-star text-primary"></i>
                                     <i class="fas fa-star text-primary"></i>
@@ -479,7 +481,7 @@
                                     <i class="fas fa-star"></i>
                                 </div>
                                 <!-- <h4 class="mb-3"> $0</h4> -->
-                                <a href="https://wa.me/" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
+                                <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aDough%20Roller" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
                             </div>
                         </div>
                     </div>
