--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@
                                 <p>The cornerstone of professional kitchen operations. Designed for precision and efficiency, this mixer.</p>
                                 <div class="d-flex justify-content-between flex-lg-wrap" style="margin-bottom: 10px;">
                                     <!-- <p class="text-dark fs-5 fw-bold">$00</p>   -->
-                                    <a href="https://wa.me/" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
+                                    <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aPlantery%20Mixter" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
                                 </div>
                             </div>
                         </div>
@@ -213,7 +213,7 @@
                                 <p>Awaken your senses and indulge the flavor of the freshly coffee with the Fit for Kitchen Coffee Machine.</p>
                                 <div class="d-flex justify-content-between pb-2 flex-lg-wrap">
                                     <!-- <p class="text-dark fs-5 fw-bold">$00</p> -->
-                                   <a href="https://wa.me/" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
+                                    <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aSalamander%20Grill" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
                                 </div>
                             </div>
                         </div>
@@ -227,7 +227,7 @@
                                 <p>Fit for Kitchen Cooking Line. Designed to inspire creativity and elevate your cooking experience,the kitchen </p>
                                 <div class="d-flex justify-content-between pb-2 flex-lg-wrap">
                                     <!-- <p class="text-dark fs-5 fw-bold">$00</p> -->
-                                    <a href="https://wa.me/" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
+                                    <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aRotary%20Oven" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
                                 </div>
                             </div>
                         </div>
@@ -241,7 +241,7 @@
                                 <p>Introducing our Juice Dispensers: the ultimate solution for refreshing beverages. Designed for both functionality and style.  </p>
                                 <div class="d-flex justify-content-between pb-2 flex-lg-wrap">
                                     <!-- <p class="text-dark fs-5 fw-bold">$00</p>/ -->
-                                    <a href="https://wa.me/" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
+                                    <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aJuice%20Dispensers" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
                                 </div>
                             </div>
                         </div>
