img and name changed

--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                         <div id="carouselId" class="carousel slide position-relative" data-bs-ride="carousel">
                             <div class="carousel-inner" role="listbox">
                                 <div class="carousel-item active rounded">
-                                    <img src="images/les/btm1.jpg" class="img-fluid w-100 h-100 bg-secondary rounded" alt="First slide">
+                                    <img src="images/les/ab1.jpeg" class="img-fluid w-100 h-100 bg-secondary rounded" alt="First slide">
                                     <a href="#" class="btn px-4 py-2 text-white rounded">Cooking Line</a>
                                 </div>
                                 <div class="carousel-item rounded">
-                                    <img src="images/les/btm2.jpg" class="img-fluid w-100 h-100 rounded" alt="Second slide">
+                                    <img src="images/les/ab2.jpeg" class="img-fluid w-100 h-100 rounded" alt="Second slide">
                                     <a href="#" class="btn px-4 py-2 text-white rounded">Preperation Line</a>
                                 </div>
                             </div>
@@ -206,11 +206,11 @@
                     <div class="col-md-6 col-lg-4">
                         <a href="#">
                             <div class="service-item bg-primary rounded border border-primary">
-                                <img src="images/new/im3.jpg" class="img-fluid rounded-top w-100" alt="">
+                                <img src="images/new/ab3.jpeg" class="img-fluid rounded-top w-100" alt="">
                                 <div class="px-4 rounded-bottom">
                                     <div class="service-content bg-secondary text-center p-4 rounded">
                                         <!-- <h5 class="text-white">OVEN</h5> -->
-                                        <h3 class="mb-0">Backery Line</h3>
+                                        <h3 class="mb-0">Commercial Kitchen Equipments</h3>
                                     </div>
                                 </div>
                             </div>
@@ -219,11 +219,11 @@
                     <div class="col-md-6 col-lg-4">
                         <a href="#">
                             <div class="service-item bg-dark rounded border border-dark">
-                                <img src="images/new/im4.jpg" class="img-fluid rounded-top w-100" alt="">
+                                <img src="images/new/ab4.png" class="img-fluid rounded-top w-100" alt="">
                                 <div class="px-4 rounded-bottom">
                                     <div class="service-content bg-light text-center p-4 rounded">
                                         <!-- <h5 class="text-primary">GRILL</h5> -->
-                                        <h3 class="mb-0">Oven Line</h3>
+                                        <h3 class="mb-0">Stainless Steel Fabrication</h3>
                                     </div>
                                 </div>
                             </div>
@@ -232,11 +232,11 @@
                     <div class="col-md-6 col-lg-4">
                         <a href="#">
                             <div class="service-item bg-primary rounded border border-primary">
-                                <img src="images/les/btm2.jpg"class="img-fluid rounded-top w-100" alt="">
+                                <img src="images/new/ab5.png"class="img-fluid rounded-top w-100" alt="">
                                 <div class="px-4 rounded-bottom">
                                     <div class="service-content bg-secondary text-center p-4 rounded">
                                         <!-- <h5 class="text-white">Coffee Machine</h5> -->
-                                        <h3 class="mb-0">Preparation Line</h3>
+                                        <h3 class="mb-0">Butchery Equipments</h3>
                                     </div>
                                 </div>
                             </div>
