--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                         <div class="text-center">
                             <img src="images/les/new/bakary/Dough roller.png" class="img-fluid rounded" alt="">
                             <div class="py-2">
-                                <a href="#" class="h5">Dough Roller/a>
+                                <a href="#" class="h5">Dough Roller</a>
                                 <div class="d-flex my-3 justify-content-center">
                                     <i class="fas fa-star text-primary"></i>
                                     <i class="fas fa-star text-primary"></i>
