--- a/contact.html
+++ b/contact.html
@@ -227,8 +227,8 @@
                         <a class="btn-link" href="products.html">Cooking Line </a>
                         <a class="btn-link" href="products.html">Refrigeration Line </a>
                         <a class="btn-link" href="products.html"products>Preparation Line</a>
-                        <a class="btn-link" href="products.html">Oven line </a>
-                        <a class="btn-link" href="products.html">Backery Line</a>
+                        <a class="btn-link" href="products.html">Oven Line </a>
+                        <a class="btn-link" href="products.html">Bakary Line</a>
                         <!-- <a class="btn-link" href="products.html">International Orders</a> -->
                     </div>
                 </div>
