--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                         <div class="p-4 rounded bg-light">
                             <div class="row align-items-center">
                                 <div class="col-6">
-                                    <img src="images/les/new/cooking line/Cooking range.png" class="img-fluid rounded-circle w-100" alt="">
+                                    <img src="images/les/new/Cooking Line/Cooking range.png" class="img-fluid rounded-circle w-100" alt="">
                                 </div>
                                 <div class="col-6">
                                     <a href="#" class="h5">Cooking Range</a>
@@ -358,7 +358,7 @@
                         <div class="p-4 rounded bg-light">
                             <div class="row align-items-center">
                                 <div class="col-6">
-                                    <img src="images/les/new/preparation line/Blenders.png" class="img-fluid rounded-circle w-100" alt="">
+                                    <img src="images/les/new/Preparation Line/Blenders.png" class="img-fluid rounded-circle w-100" alt="">
                                 </div>
                                 <div class="col-6">
                                     <a href="#" class="h5">Blenders</a>
@@ -419,7 +419,7 @@
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="text-center">
-                            <img src="images/les/new/preparation line/Coffee Machine.png" class="img-fluid rounded" alt="">
+                            <img src="images/les/new/Preparation Line/Coffee Machine.png" class="img-fluid rounded" alt="">
                             <div class="py-4">
                                 <a href="#" class="h5">Coffee Machine</a>
                                 <div class="d-flex my-3 justify-content-center">
@@ -453,7 +453,7 @@
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="text-center">
-                            <img src="images/les/new/cooking line/Lava stone grill.png" class="img-fluid rounded" alt="">
+                            <img src="images/les/new/Cooking Line/Lava stone grill.png" class="img-fluid rounded" alt="">
                             <div class="py-4">
                                 <a href="#" class="h5">Lava Stone Grill</a>
                                 <div class="d-flex my-3 justify-content-center">
@@ -637,8 +637,8 @@
                             <a class="btn-link" href="products.html">Cooking Line </a>
                             <a class="btn-link" href="products.html">Refrigeration Line </a>
                             <a class="btn-link" href="products.html"products>Preparation Line</a>
-                            <a class="btn-link" href="products.html">Oven line </a>
-                            <a class="btn-link" href="products.html">Backery Line</a>
+                            <a class="btn-link" href="products.html">Oven Line </a>
+                            <a class="btn-link" href="products.html">Bakary Line</a>
                             <!-- <a class="btn-link" href="products.html">International Orders</a> -->
                         </div>
                     </div>
