--- a/about.html
+++ b/about.html
@@ -205,7 +205,7 @@
                         </div>
                         <div class="border border-primary rounded position-relative vesitable-item">
                             <div class="vesitable-img">
-                                <img src="images/les/new/cooking line/Salamander Grill.png" class="img-fluid w-100 rounded-top" alt="">
+                                <img src="images/les/new/Cooking Line/Salamander Grill.png" class="img-fluid w-100 rounded-top" alt="">
                             </div>
                             <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">Cooking Line</div>
                             <div class="p-4 pb-0 rounded-bottom">
@@ -233,7 +233,7 @@
                         </div>
                         <div class="border border-primary rounded position-relative vesitable-item">
                             <div class="vesitable-img">
-                                <img src="images/les/new/preparation line/Juice Dispensers.png" class="img-fluid w-100 rounded-top" alt="">
+                                <img src="images/les/new/Preparation Line/Juice Dispensers.png" class="img-fluid w-100 rounded-top" alt="">
                             </div>
                             <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">Preparation Line</div>
                             <div class="p-4 pb-0 rounded-bottom">
@@ -447,8 +447,8 @@
                         <a class="btn-link" href="products.html">Cooking Line </a>
                         <a class="btn-link" href="products.html">Refrigeration Line </a>
                         <a class="btn-link" href="products.html"products>Preparation Line</a>
-                        <a class="btn-link" href="products.html">Oven line </a>
-                        <a class="btn-link" href="products.html">Backery Line</a>
+                        <a class="btn-link" href="products.html">Oven Line </a>
+                        <a class="btn-link" href="products.html">Bakary Line</a>
                         <!-- <a class="btn-link" href="products.html">International Orders</a> -->
                     </div>
                 </div>
