--- a/products.html
+++ b/products.html
@@ -271,7 +271,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/les/cooking/4 Burner Cooking Range With Oven.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/cooking line/4 Burner Cooking Range With Oven.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -287,7 +287,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/les/cooking/American Style 6 burner Cooking Range.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/cooking line/American Style 6 burner Cooking Range.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -303,7 +303,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/les/cooking/Countertop 2 Burner Cooking Range.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/cooking line/Countertop 2 Burner Cooking Range.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -319,7 +319,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/les/cooking/Countertop 4 Burner Cooking Range.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/cooking line/Countertop 4 Burner Cooking Range.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -351,7 +351,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/les/cooking/Electric - Gas Bain Marie.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/cooking line/Electric - Gas Bain Marie.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -367,7 +367,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/les/cooking/Electric 4 Range Hot plate.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/cooking line/Electric 4 Range Hot plate.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -399,7 +399,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/les/cooking/Full Smooth Gas - Electric Griddle.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/cooking line/Full Smooth Gas - Electric Griddle.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -415,7 +415,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/les/cooking/Gas - Electric Boiling Pan.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/cooking line/Gas - Electric Boiling Pan.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -431,7 +431,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/les/cooking/Gas- Electric Counter Top Fryer.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/cooking line/Gas- Electric Counter Top Fryer.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -447,7 +447,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/les/cooking/Induction Cooker.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/cooking line/Induction Cooker.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -463,7 +463,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/les/cooking/INDUCTION RADIANT HOTPLATE.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/cooking line/INDUCTION RADIANT HOTPLATE.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -479,7 +479,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/les/cooking/Single basket Gas-Electric fryer.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/cooking line/Single basket Gas-Electric fryer.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -1065,7 +1065,7 @@
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Bakary Line </div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
                                                     <h4>Dough Sheeter</h4>
-                                                    <p>Awaken your senses and indulge the flavor of the freshly coffee with the Fit for Kitchen Coffee Machine.</p>
+                                                    <p>Bakery lines: Automated heroes churning out treats, from mix to cool (and sometimes, box!).</p>
                                                     <div class="d-flex justify-content-between pb-2 flex-lg-wrap">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aDough%20Sheeter" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
@@ -1081,7 +1081,7 @@
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Bakary Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
                                                     <h4>Plantery Mixer</h4>
-                                                    <p>Awaken your senses and indulge the flavor of the freshly coffee with the Fit for Kitchen Coffee Machine.</p>
+                                                    <p>Bakery lines: Automated heroes churning out treats, from mix to cool (and sometimes, box!).</p>
                                                     <div class="d-flex justify-content-between pb-2 flex-lg-wrap">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aPlantery%20Mixer" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
@@ -1097,7 +1097,7 @@
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Bakary Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
                                                     <h4>Spiral Mixer</h4>
-                                                    <p>Awaken your senses and indulge the flavor of the freshly coffee with the Fit for Kitchen Coffee Machine.</p>
+                                                    <p>Bakery lines: Automated heroes churning out treats, from mix to cool (and sometimes, box!).</p>
                                                     <div class="d-flex justify-content-between pb-2 flex-lg-wrap">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aSpiral%20Mixer" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
