--- a/products.html
+++ b/products.html
@@ -156,7 +156,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/Cooking Line/Cooking_range.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="/images/les/new/Cooking Line/Cooking_range.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -172,7 +172,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/Cooking Line/Electric and gas grill.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="/images/les/new/Cooking Line/Electric and gas grill.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -222,7 +222,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/Cooking Line/Gas & Electric Pasta boilers.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/Cooking line/Gas & Electric Pasta boilers.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -239,7 +239,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/Cooking Line/Salamander Grill.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/Cooking line/Salamander Grill.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -255,7 +255,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/Cooking Line/Tilting pans and boiling pans.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/cooking line/Tilting pans and boiling pans.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -383,7 +383,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/les/cooking/Electric Chips Warmer.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/les/cooking line/Electric Chips Warmer.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
