--- a/products.html
+++ b/products.html
@@ -156,7 +156,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="/images/les/new/Cooking Line/Cooking_range.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="/images/les/new/Cooking line/Cooking_range.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -172,7 +172,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="/images/les/new/Cooking Line/Electric and gas grill.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="/images/les/new/Cooking line/Electric and gas grill.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -188,7 +188,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/Cooking Line/Electric Hot plate1.png" clas
+                                                    <img src="images/les/new/Cooking line/Electric Hot plate1.png" clas
                                                     s="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
