--- a/products.html
+++ b/products.html
@@ -172,7 +172,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="/images/les/new/Cooking line/Electric and gas grill.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="/images/les/new/cooking line/Electric and gas grill.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -188,7 +188,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/Cooking line/Electric Hot plate1.png" clas
+                                                    <img src="images/les/new/cooking line/Electric Hot plate1.png" clas
                                                     s="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
@@ -222,7 +222,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/Cooking line/Gas & Electric Pasta boilers.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/cooking line/Gas & Electric Pasta boilers.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -239,7 +239,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/Cooking line/Salamander Grill.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/cooking line/Salamander Grill.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -335,7 +335,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/les/cooking/Double Basket Gas-Electric fryer.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/cooking line/Double Basket Gas-Electric fryer.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -383,7 +383,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/les/cooking line/Electric Chips Warmer.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/cooking line/Electric Chips Warmer.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Cooking Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
