--- a/products.html
+++ b/products.html
@@ -556,7 +556,7 @@
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Refrigeration</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
                                                     <h4>Saladette Chiller</h4>
-                                                    <p>One line carries cool, pressurized "liquid gold" from the system's heart, ready to unleash its chilling power forever.</p>
+                                                    <p>One line carries cool, pressurized "liquid gold" from the system's heart, ready to unleash its chilling freezing refreshing power all time to powerize.</p>
                                                     <div class="d-flex justify-content-between pb-2 flex-lg-wrap">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$0</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aSaladette%20Chiller" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
@@ -787,7 +787,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/Preparation Line/Blenders.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/preparation line/Blenders.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Preparation Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -803,7 +803,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/Preparation Line/Coffee Machine.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/preparation line/Coffee Machine.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Preparation Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -819,7 +819,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/Preparation Line/Hand blenders and power mixers.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/preparation line/Hand blenders and power mixers.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Preparation Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -835,7 +835,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/Preparation Line/Ice cream Machines.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/preparation line/Ice cream Machines.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Preparation Linel</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -851,7 +851,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/Preparation Line/Juice Dispensers.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/preparation line/Juice Dispensers.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Preparation Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -867,7 +867,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/Preparation Line/Meat mincer machine.png   " class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/preparation line/Meat mincer machine.png   " class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Preparation Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
@@ -883,7 +883,7 @@
                                         <div class="col-md-6 col-lg-4 col-xl-3">
                                             <div class="rounded position-relative fruite-item">
                                                 <div class="fruite-img">
-                                                    <img src="images/les/new/Preparation Line/Vegetable Cutters.png" class="img-fluid w-100 rounded-top" alt="">
+                                                    <img src="images/les/new/preparation line/Vegetable Cutters.png" class="img-fluid w-100 rounded-top" alt="">
                                                 </div>
                                                 <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Preparation Line</div>
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom">
