--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                         <div class="p-4 rounded bg-light">
                             <div class="row align-items-center">
                                 <div class="col-6">
-                                    <img src="images/les/new/cooking line/Cooking range.png" class="img-fluid rounded-circle w-100" alt="">
+                                    <img src="images/les/new/cooking line/Cooking_range.png" class="img-fluid rounded-circle w-100" alt="">
                                 </div>
                                 <div class="col-6">
                                     <a href="#" class="h5">Cooking Range</a>
