--- a/contact.html
+++ b/contact.html
@@ -240,6 +240,7 @@
                         <p>Email: info@fit4kitchen.in</p>
                         <p>Phone: +971 58 290 8151 <br> </p>
                         <p style="margin-left: 55px;">+971 56 479 8242</p>
+                        <p style="margin-left: 55px;">+971 50 829 2231</p>
                         <!-- <p>Payment Accepted</p>
                         <img src="img/payment.png" class="img-fluid" alt=""> -->
                     </div>
