--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             </div>
                             <div class="featurs-content text-center">
                                 <h5>Quality Assurance </h5>
-                                <p class="mb-0">Shop with confidence</p>
+                                <p class="mb-0">Shop with Confidence</p>
                             </div>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                             </div>
                             <div class="featurs-content text-center">
                                 <h5>Security Payment</h5>
-                                <p class="mb-0">100% security payment</p>
+                                <p class="mb-0">100% Security Payment</p>
                             </div>
                         </div>
                     </div>
@@ -185,7 +185,7 @@
                             </div>
                             <div class="featurs-content text-center">
                                 <h5>24/7 Support</h5>
-                                <p class="mb-0">Support every time fast</p>
+                                <p class="mb-0">Support Every Time Fast</p>
                             </div>
                         </div>
                     </div>
