--- a/about.html
+++ b/about.html
@@ -193,7 +193,7 @@
                             <div class="vesitable-img">
                                 <img src="images/les/new/bakary/Plantery Mixer.png " class="img-fluid w-100 rounded-top" alt="">
                             </div>
-                            <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">Bakary Line</div>
+                            <div class="text-white bg-primary px-3 py-1 rounded position-absolute" style="top: 10px; right: 10px;">Bakery and Pizza</div>
                             <div class="p-4 pb-0 rounded-bottom">
                                 <h4>Plantery Mixer</h4>
                                 <p>The cornerstone of professional kitchen operations. Designed for precision and efficiency, this mixer.</p>
@@ -448,14 +448,14 @@
                         <a class="btn-link" href="products.html">Refrigeration Line </a>
                         <a class="btn-link" href="products.html"products>Preparation Line</a>
                         <a class="btn-link" href="products.html">Oven Line </a>
-                        <a class="btn-link" href="products.html">Bakary Line</a>
+                        <a class="btn-link" href="products.html">Bakery and Pizza</a>
                         <!-- <a class="btn-link" href="products.html">International Orders</a> -->
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="footer-item">
                         <h4 class="text-light mb-3">Contact</h4>
-                        <p>Address: shams business center,sharjha media city sharjah UAE</p>
+                        <p>Address: Shams business center,Sharjha media city Sharjah UAE</p>
                         <p>Email: sales@fit4kitchen.in</p>
                         <p>Email: info@fit4kitchen.in</p>
                         <p>Phone: +971 58 290 8151 <br> </p>
