--- a/index.html
+++ b/index.html
@@ -638,14 +638,14 @@
                             <a class="btn-link" href="products.html">Refrigeration Line </a>
                             <a class="btn-link" href="products.html"products>Preparation Line</a>
                             <a class="btn-link" href="products.html">Oven Line </a>
-                            <a class="btn-link" href="products.html">Bakary Line</a>
+                            <a class="btn-link" href="products.html">Bakery and Pizza</a>
                             <!-- <a class="btn-link" href="products.html">International Orders</a> -->
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-item">
                             <h4 class="text-light mb-3">Contact</h4>
-                            <p>Address: shams business center,sharjha media city sharjah UAE</p>
+                            <p>Address: Shams business center,Sharjha media city Sharjah UAE</p>
                             <p>Email: sales@fit4kitchen.in</p>
                             <p>Email: info@fit4kitchen.in</p>
                             <p>Phone: +971 58 290 8151 <br> </p>
